# numberstore

./: CMakeLists.txt  CMakeSettings.json  LICENSE  README.md
cli/: CLIApplication.cxx  CLIApplication.hxx  CLIMain.cxx  DaemonClient.cxx  DaemonClient.hxx
daemon/: ClientHandler.cxx  ClientHandler.hxx  CommandProcessor.cxx  CommandProcessor.hxx  ConnectionManager.cxx  ConnectionManager.hxx  DaemonMain.cxx  DaemonServer.cxx  DaemonServer.hxx  SignalHandler.cxx  SignalHandler.hxx
ipc/: NamedPipeClient.cxx  NamedPipeClient.hxx  NamedPipeConnection.cxx  NamedPipeConnection.hxx  NamedPipeServer.cxx  NamedPipeServer.hxx
protocol/: Command.cxx  Command.hxx  Message.cxx  Message.hxx  MessageSerializer.cxx  MessageSerializer.hxx  Response.cxx  Response.hxx
storage/: NumberStore.cxx  NumberStore.hxx  SnapshotManager.cxx  SnapshotManager.hxx
utils/: Config.cxx  Config.hxx  Constants.hxx  ErrorCodes.cxx  ErrorCodes.hxx  Logger.cxx  Logger.hxx  SingleInstanceManager.cxx  SingleInstanceManager.hxx  TimeUtils.cxx  TimeUtils.hxx  Validator.cxx  Validator.hxx
